# bot

./: .cursorignore  .dockerignore  .env  .env.example  .flake8  .gitattributes  .gitignore  BUGFIXES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SUMMARY.md  adaptive_quality_test_plan.md  automation_system.md  backup.py  bot.py  changes.patch  clan_schema.sql  clean_workspace.ps1  clone_additional_repos.py  clone_more_repos.py  clone_repos.py  config.yaml  critical-addendum.md  discord_bot.py  discord_bot_combined.py  docker-compose.monitoring.yml  docker-compose.yml  event_test.py  flake8_fix.py  game_systems.py  hello.py  implementation_plan.md  implementation_timeline.md  index.html  install.bat  (+38 more)
.github/: CODEOWNERS  FUNDING.yml  config.yml  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  failing-tests.md  feature_request.yml
.github/workflows/: accessibility.yml  analytics.yml  api-test.yml  audit.yml  backup.yml  benchmark.yml  branch-protection.yml  changelog.yml  chaos.yml  ci.yml  cleanup.yml  code-quality.yml  community.yml  compatibility.yml  compliance.yml  concurrency.yml  database.yml  dependencies.yml  deploy.yml  docs.yml  documentation.yml  e2e.yml  fuzzing.yml  infrastructure.yml  integration.yml  issues.yml  labeler.yml  load-test.yml  localization.yml  maintenance.yml  metrics.yml  migration.yml  monitoring.yml  notifications.yml  optimization.yml  performance.yml  profiling.yml  project.yml  recovery.yml  regression.yml  (+14 more)
clean_bot/: .cursorignore
clean_bot/src/: bot.py  main.py
cogs/: admin.py  base_cog.py  battle_system.py  combat.py  combat_commands.py  database.py  fun.py  fun_commands.py  game_commands.py  game_math.py  games.py  help_command.py  help_commands.py  media.py  osrs.py  osrs_commands.py  pet_commands.py  plex_commands.py  pokemon.py  pokemon_battle.py  pokemon_gym.py  pokemon_pets.py  pokemon_tournament.py  quest_commands.py  trade_commands.py  voice.py
collaborative-editor/frontend/: package.json
config/: .coveragerc  .editorconfig  .env.example  .env.template  .pre-commit-config.yaml  Makefile  config.py  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-plex.txt  requirements.txt  secrets.yaml  setup.cfg
data/cache/: achievement_data_data.json  achievements.json  clan_data_data.json  ge_data_data.json  item_data_data.json  minigame_data_data.json  music_data_data.json  quest_data_data.json  skill_data_data.json  wiki_data_data.json
data/collected/: collection_20250216_201523.json  collection_20250216_201643.json  collection_20250216_201722.json
database/schema/: schema.sql
deploy/: docker-compose.prod.yaml  docker-compose.yaml
deploy/k8s/: deployment.yaml  network-policy.yaml  redis-backup-config.yaml  redis-backup-cron.yaml  redis-backup-data-pvc.yaml
deploy/kubernetes/: redis-deployment.yaml  redis-service.yaml
deploy/monitoring/: prometheus-alerts.yml
discord_bot/: __init__.py  bot.py
discord_bot/cogs/: admin_commands.py  base.py  custom_commands.py  fun_commands.py  game_commands.py  general_commands.py  (+5 more)
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  docker-compose.yml  nginx.conf
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_STRUCTURE.md  INDEX.md  INSTALL.md  README-plex.md  README.md  SECURITY.md  docs.md  extending_cog.md  external-repos.md  index.html  index.md  quickstart.md  unified_systems.md
grafana/: Dockerfile  grafana.ini
migrations/: 001_initial.sql
notes/: Project Directory Structure.md  adaptive_quality_test_plan.md  backpressure_system.md  critical-addendum.md  detailed-plan.txt  documentation_improvements.md  environment_variables.md  error_handling_architecture.md  error_handling_issues.md  game_systems_integration_todo.md  implementation_analysis_2024_02.md  implementation_progress_2024_02.md  missing_components.md  optimal-stack.mermaid  optimized_implementation.md  overview.md  package_configuration.md  pokemon_metadata_todo.md  project-structure.txt  project_analysis.md  recommended_additions.md  refactoring_progress.md  repo-list.md  security_concerns.md  system-architecture.mermaid  system-overview.mermaid  task_manager_investigation.md  technical-implementation.py  testing_overview.md  type_hint_issues.md  ui-mockup(1).tsx
plex_api/: client.py
prometheus/: Dockerfile  alerts.yml  prometheus.yml  recording_rules.yml
scripts/: fetch_osrs_data.py  final_cleanup.ps1  initialize_osrs_data.py  launch_plex.bat  launch_plex.py  move_files.ps1  move_unique_code.py  setup_environment.py  shutdown.py  update_osrs_data.py
security/: scan_requirements.sh
setup/: install_plex.py  setup.py  setup_plex.py  uninstall.sh  update.py  verify.sh
src/: application.py  bot.py  download_repos.py  launch_plex_selfbot.py  main.py  parse_repos.py  repo_manager.py  run_selfbot.py  search_repos.py  update_metadata.py
tests/: __init__.py  conftest.py  event_test.py  example.spec.ts  test_activity_feed.py  test_activity_heatmap.py  test_alerts.py  test_backpressure.py  test_battle.py  test_battle_core.py  test_battle_integration.py  test_battle_logger.py  test_battle_system.py  test_caching.py  test_circuit_breaker.py  test_config.py  test_core_functionality.py  test_dashboard.py  test_di_container.py  test_discord_bot.py  test_effects_helpers.py  test_error_manager.py  test_exceptions.py  test_feature_feedback.py  test_feature_management.py  test_feature_status.py  test_ffmpeg_manager.py  test_health.py  test_imports.py  test_input_validation.py  test_logging_setup.py  test_media_browser.py  test_media_commands.py  test_media_playback.py  test_media_player.py  test_media_queue.py  test_metrics.py  test_models.py  test_network_flow.py  test_notification_center.py  (+23 more)
unique_osrs_code/: README.md
utils/: config.py  db_migrations.py  giphy_client.py  logging_setup.py  scan.py  scanner.py  spotify_client.py  test_print.py  test_venv.py  verify.py
web_server/: server.py
(+530 files in other folders)
