[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "osrs-discord-bot"
version = "1.0.0"
description = "Discord bot with OSRS integration, Plex streaming, and game features"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Project Contributors"}
]
dependencies = [
    # Core
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "requests>=2.31.0",
    "aiofiles>=23.2.0",
    "ujson>=5.8.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
    "humanize>=4.9.0",
    "colorama>=0.4.6",
    "rich>=13.0.0",
    "websockets>=12.0",
    "typing-extensions>=4.7.1",
    "PyYAML>=6.0.1",

    # Database
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",

    # Caching
    "redis>=5.0.0",
    "aioredis>=2.0.0",

    # Discord
    "discord.py>=2.3.0",

    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "starlette>=0.27.0",
    "httpx>=0.25.0",
    "Flask>=3.0.0",
    "Flask-CORS>=4.0.0",
    "gunicorn>=21.2.0",

    # APIs and Parsing
    "plexapi>=4.0.0",
    "mwclient>=0.10.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pokebase>=1.3.0",
    "requests-cache>=0.9.0",
    "mwparserfromhell>=0.6.0",
    "pokemontcgsdk>=2.0.0",
    "PyGithub>=2.1.0",
    "spotipy>=2.23.0",
    "google-api-python-client>=2.108.0",
    "stackapi>=0.3.0",
    "vdf>=3.4",
    "wikitextparser>=0.55.0",

    # Media
    "PyNaCl>=1.4.0",
    "wavelink>=3.2.0",
    "yt-dlp>=2023.12.0",
    "ffmpeg-python>=0.2.0",

    # Security
    "cryptography>=41.0.0",
    "passlib>=1.7.0",
    "python-jose>=3.3.0",
    "prometheus_client>=0.19.0",
    "dependency-injector>=4.41.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.4.0",

    # Linters and Formatters
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.7",
    "safety>=3.2.4",
    "pip-audit>=2.7.3",
    "bump2version>=1.0.1",

    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.0",
    "watchdog>=4.0.0",

    # Dev-only integrations
    "hvac>=1.2.1",
]

postgres = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
]

monitoring = [
    "prometheus_client>=0.19.0",
    "grafana-api>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--verbose",
    "--asyncio-mode=auto"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
    "**/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 100
known_first_party = ["src"]
known_third_party = ["discord", "pytest", "redis"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
    "W0621",  # redefined-outer-name
    "W0212",  # protected-access
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
]

[tool.pylint.format]
max-line-length = 100

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # skip assert warnings

[tool.pyright]
include = ["src"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "src/experimental",
    "src/typestubs"
]
defineConstant = { DEBUG = true }
venvPath = "."
venv = "venv"

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.11"
pythonPlatform = "All"

executionEnvironments = [
  { root = "src" }
] 