[metadata]
name = osrs-discord-bot
version = 0.1.0
description = A Discord bot for OSRS simulation
author = Your Name
author_email = your.email@example.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/osrs-discord-bot
project_urls =
    Bug Tracker = https://github.com/yourusername/osrs-discord-bot/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Framework :: AsyncIO
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Games/Entertainment
    Topic :: Communications :: Chat

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    discord.py>=2.3.2
    python-dotenv>=1.0.0
    redis>=4.6.0
    aiohttp>=3.9.3

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-mock>=3.11.1
    mypy>=1.5.1
    flake8>=6.1.0
    black>=23.7.0
    isort>=5.12.0
    types-setuptools>=68.0.0

[flake8]
max-line-length = 88
extend-ignore = E203
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_optional = True
plugins = numpy.typing.mypy_plugin

[mypy-setuptools.*]
ignore_missing_imports = True

[mypy-discord.*]
ignore_missing_imports = True

[mypy-redis.*]
ignore_missing_imports = True

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts =
    --strict-markers
    --strict-config
    --tb=short
    -v
    --durations=10
    --maxfail=3
    --cov=src
    --cov-report=term-missing
    --cov-report=html
asyncio_mode = auto

[coverage:run]
source = src
branch = True
omit =
    src/main.py
    src/*/__init__.py
    src/*/migrations/*
    src/*/tests/*
    src/*/conftest.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
    except ImportError:
    raise AssertionError
    def __str__
    @abstractmethod

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 88
